--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "AVALIACAORUHAN",
-    "slug": "AVALIACAORUHAN",
+    "name": "PI3rao",
+    "slug": "PI3rao",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
